# aperture-rs

./: Cargo.toml
aperture-wasm/: Cargo.toml
aperture-wasm/src/: lib.rs
aperture/examples/: cube.rs
aperture/src/: lib.rs
examples/: cube.rs
src/: lib.rs
src/camera/: mod.rs
src/eventhandler/: mod.rs
src/perspective/: mod.rs
