[package]
name = "aperture-wasm"
version = "0.1.0"
authors = ["ThermalSpan <russell.w.bentley@icloud.com>"]

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
aperture = { path = "../aperture", default-features = false }
lazy_static = "1.0.1"
wasm-bindgen = "0.2.11"
